<resources>
    <string name="app_name">Activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="home_button">Home</string>
    <string name="diary_button">Diary</string>
    <string name="add_button">Add</string>
    <string name="Stats_button">Stats</string>
    <string name="more_button">More</string>
    <string name="profile_button">Profile</string>
    <string name="diary_settings_button">Diary Settings</string>
    <string name="logout_button">Logout</string>
    <string name="gender_text">Male/Female</string>
    <string name="country_text">Where are you from?</string>
    <string name="dob_text">mm/dd/yyyy</string>
    <string name="save_button">Save</string>
    <string name="addactivity">New Activity</string>
    <string name="back"><</string>
    <string name="email_text">Email to be contact by</string>
    <string name="username_text">Unique Username</string>
    <string name="profile_type">How active you are?</string>
    <string name="day">Day</string>
    <string name="cpercentage">0%</string>
    <string name="upercentage">0%</string>
    <string name="fpercentage">0%</string>
    <string name="total">Total</string>
    <string name="completed">Completed</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="failed">Failed</string>
    <string name="welcome">" "</string>
    <string name="about">About Us/Assistance</string>
</resources>
