<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.activity.Settings"
    android:layout_width="match_parent">

    <Button
        android:text="@string/diary_settings_button"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:id="@+id/button7"
        android:onClick="Diary_SettingsPage (Settings)"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textColor="@android:color/background_light"
        android:textAllCaps="false"
        android:textAlignment="center" />

    <ImageButton
        android:layout_width="70px"
        android:layout_height="50px"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageButton13"
        android:onClick="PreviousPage (Settings)"
        android:background="@android:color/transparent"
        android:tint="@android:color/holo_purple" />

    <Button
        android:text="@string/profile_button"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginTop="80dp"
        android:id="@+id/button5"
        android:onClick="ProfilePage (Settings)"
        android:layout_below="@+id/imageButton13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false" />

    <Button
        android:text="@string/home_button"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button"
        android:onClick="homePage (MainActivity)"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/imageButton"
        android:layout_alignTop="@+id/button4"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/add_button"
        android:onClick="AddPage (MainActivity)"
        android:backgroundTint="@android:color/transparent"
        android:tint="?android:attr/colorActivatedHighlight" />


    <Button

        android:text="@string/diary_button"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:id="@+id/button2"
        android:onClick="diaryPage (MainActivity)"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/imageButton"
        android:layout_toStartOf="@+id/imageButton"
        android:textColor="?attr/colorBackgroundFloating"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false" />

    <Button
        android:text="@string/more_button"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:id="@+id/button3"
        android:onClick="MorePage (MainActivity)"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_marginLeft="73dp"
        android:layout_marginStart="73dp"
        android:textColor="@android:color/background_light"
        android:textAllCaps="false"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <Button
        android:text="@string/Stats_button"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:id="@+id/button4"
        android:onClick="statsPage (MainActivity)"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false" />

    <Button
        android:text="@string/about"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:id="@+id/button6"
        android:onClick="AboutPage (Settings)"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textColor="@android:color/background_light"
        android:textAllCaps="false"
        android:layout_below="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:textAlignment="center" />

</RelativeLayout>
