<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.activity.Profile">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/country_text"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="12sp"
        android:textColor="@android:color/holo_blue_dark" />

    <ImageButton
        android:layout_width="70px"
        android:layout_height="50px"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:id="@+id/imageButton9"
        android:layout_alignParentTop="true"
        android:onClick="PreviousPage (Profile)"
        android:tint="@android:color/holo_purple"
        android:background="@android:color/background_light" />

    <TextView
        android:text="Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView17"
        android:layout_below="@+id/textView16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <TextView
        android:text="Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView17"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView18"
        android:textColor="@android:color/black" />

    <TextView
        android:text="Data of Birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView19"
        android:textColor="@android:color/black" />

    <TextView
        android:text="Country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView20"
        android:textColor="@android:color/black" />

    <TextView
        android:text="Email Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textView21"
        android:textColor="@android:color/black" />

    <TextView
        android:text="User Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/textView16"
        android:layout_below="@+id/imageButton9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/dob_text"
        android:ems="10"
        android:id="@+id/editTeext"
        android:layout_alignBaseline="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="12sp"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/username_text"
        android:ems="10"
        android:id="@+id/editTexte"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="sans-serif"
        android:textSize="12sp"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:text="@string/home_button"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button"
        android:onClick="homePage (MainActivity)"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/imageButton"
        android:layout_alignTop="@+id/button4"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/add_button"
        android:onClick="AddPage (MainActivity)"
        android:backgroundTint="@android:color/transparent"
        android:tint="?android:attr/colorActivatedHighlight" />


    <Button

        android:text="@string/diary_button"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:id="@+id/button2"
        android:onClick="diaryPage (MainActivity)"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/imageButton"
        android:layout_toStartOf="@+id/imageButton"
        android:textColor="?attr/colorBackgroundFloating"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false" />

    <Button
        android:text="@string/more_button"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:id="@+id/button3"
        android:onClick="MorePage (MainActivity)"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_marginLeft="73dp"
        android:layout_marginStart="73dp"
        android:textColor="@android:color/background_light"
        android:textAllCaps="false"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <Button
        android:text="@string/Stats_button"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:id="@+id/button4"
        android:onClick="statsPage (MainActivity)"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false" />

    <Button
        android:text="@string/save_button"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:id="@+id/bsave"
        android:onClick="onClick (Profile)"
        android:backgroundTint="@android:color/holo_purple"
        android:textColor="@android:color/background_light"
        android:textAllCaps="false"
        android:layout_below="@+id/etemail"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="49dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/gender_text"
        android:ems="10"
        android:id="@+id/etgender"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView18"
        android:layout_alignBottom="@+id/textView18"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/profile_type"
        android:ems="10"
        android:id="@+id/etprofile"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/email_text"
        android:ems="10"
        android:id="@+id/etemail"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView21"
        android:layout_alignBottom="@+id/textView21"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_blue_dark" />

</RelativeLayout>
