<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.activity.MainActivity">


    <Button
        android:text="Weekly"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false" />

    <Button
        android:text="Today"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button3"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_marginBottom="101dp"
        android:id="@+id/textView"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:id="@+id/textView8"
        android:layout_above="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/upercentage"
        android:ems="10"
        android:id="@+id/uncomplete_percentage"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/fpercentage"
        android:ems="10"
        android:id="@+id/fail_percentage"
        android:layout_below="@+id/uncomplete_percentage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/cpercentage"
        android:ems="10"
        android:id="@+id/complete_percentage"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/uncompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/complete_percentage"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_alignBaseline="@+id/fail_percentage"
        android:layout_alignBottom="@+id/fail_percentage"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="normal|bold" />

    <Button
        android:text="Daily"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:id="@+id/button2"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <ImageButton
        android:layout_width="70px"
        android:layout_height="50px"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:id="@+id/imageButton6"
        android:tint="@android:color/holo_purple"
        android:background="@android:color/background_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.github.mikephil.charting.charts.PieChart
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/idPieChart"
        android:layout_below="@+id/imageButton6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></com.github.mikephil.charting.charts.PieChart>


</RelativeLayout>
